2003-04-23  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>

	* src/fs-ecos.c: mtab -> cyg_mtab. Ditto cyg_mtab_end. 

2003-03-25  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* src/fs-ecos.c
        Fixed segmentation fault when unmounting file system.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/jffs2.cdl: Fix doc link.

2003-02-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/jffs2.cdl: Remove unused flash geometry CDL options.

2003-02-04  Gary Thomas  <gary@mlbassoc.com> on behalf of
2003-02-04  David Woodhouse <dwmw2@cambridge.redhat.com>	

	* src/write.c: 
	* src/scan.c: 
	* src/readinode.c: 
	* src/read.c: 
	* src/pushpull.h: 
	* src/os-ecos.h: 
	* src/nodemgmt.c: 
	* src/nodelist.h: 
	* src/nodelist.c: 
	* src/malloc-ecos.c: 
	* src/jffs2port.h: 
	* src/gc.c: 
	* src/file-ecos.c: 
	* src/erase.c: 
	* src/dir-ecos.c: 
	* src/compr_zlib.c: 
	* src/compr_rubin.c: 
	* src/compr_rtime.c: 
	* src/compr.c: 
	* src/build.c: 
	* cdl/jffs2.cdl: Update to latest public JFFS2 codebase.

	* src/list.h: 
	* src/jffs2_fs_sb.h: 
	* src/jffs2_fs_i.h: 
	* src/jffs2.h: 
	* src/jffs2.c: 
	* src/crc32.h: 
	* src/background.c: Removed/renamed file(s).

	* src/fs-ecos.c: 
	* include/linux/jffs2_fs_sb.h: 
	* include/linux/jffs2_fs_i.h: 
	* include/linux/jffs2.h: New file(s).

2002-12-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/jffs2.cdl: Implements the CYGINT_IO_FILEIO_FS interface.

2002-10-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/crc32.h (crc32): Use the CRC package for crc calculation
	* tests/romfileio1.c (main): Pass the name of the device to mount

2002-05-20  Jonathan Larmour  <jlarmour@redhat.com>

	* src/LICENCE: New file. Contains license for JFFS2, now GPL+exception.
	* src/background.c: Point at LICENSE file instead of existing text.
	* src/build.c: Ditto.
	* src/compr.c: Ditto.
	* src/compr_rtime.c: Ditto.
	* src/compr_rubin.c: Ditto.
	* src/compr_zlib.c: Ditto.
	* src/dir-ecos.c: Ditto.
	* src/erase.c: Ditto.